# codemods

./: .gitignore  EXAMPLE_SPEC.md  README.md  SPEC.md  pixi.toml  pyproject.toml
.llm/prompts/: FEEDBACK-2026-06-10T08:09:06-04:00.md
examples/clang-tidy-curl/: curl-fake.hcl  curl.hcl
examples/clang-tidy-curl/mods/: build-and-test.sh  clang-tidy-fix.sh  configure.sh
src/codemods/: cli.py  codeowners.py  config.py  db.py  decompose.py  engine.py  runner.py  state.py  worktree.py
src/codemods/notify/: base.py  email.py
src/codemods/review/: base.py  fake.py  github.py
tests/: conftest.py  test_config.py  test_db.py  test_decompose.py  test_engine.py
