[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codemods"
version = "0.1.0"
description = "Sample implementation of the codemods specification"
requires-python = ">=3.12"

[project.scripts]
codemods = "codemods.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codemods"]

[tool.pytest.ini_options]
testpaths = ["tests"]
